--- a/index.ipynb
+++ b/index.ipynb
@@ -77,12 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "travel_month = \"January\" # \"January\"\n",
+    "travel_month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "travel_month = \"January\" # \"January\"\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
