--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = 3 # 3"
+    "number_of_weeks # 3"
    ]
   },
   {
@@ -161,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = 5 # 5"
+    "number_of_weeks # 5"
    ]
   },
   {
