--- a/index.ipynb
+++ b/index.ipynb
@@ -137,13 +137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks = 3 # 3\n",
-    "numb"
+    "number_of_weeks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -165,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = 5 # 5"
+    "number_of_weeks = 5 # 5\n",
+    "numbv"
    ]
   },
   {
